--- a/content/book/4/4.5.md
+++ b/content/book/4/4.5.md
@@ -4,7 +4,7 @@ metaTitle: '4.5. Последовательные текстовые файлы.
 metaDescription: '4.5. Последовательные текстовые файлы. Формат'
 ---
 
-Файлы – последовательные потоки символов
+## Файлы – последовательные потоки символов
 По умолчанию, файлы, с которыми работают стандартные функции ввода-вывода, являются последовательными текстовыми, т.е. представляют собой потоки символов в сложившейся стандартной системе представления текста «символ-байт» (см. 4.4). Другие формы представления данных в файле и способы работы с ними рассмотрены в 9.4,9.5.
 
 Работа с файлами производится в сеансовом режиме. Это значит, что функция открытия файла устанавливает связь между открытым файлом и идентифицирующим его элементом в программе. Идентификатором файла (в некоторых библиотеках) может быть целое число (handle). В стандартной библиотеке используется указателе на структурированную переменную – описатель (дескриптор) файла в библиотеке типа FILE*. При выполнении операций чтения-записи и при закрытии файла нужно использовать этот идентификатор как параметр функций ввода-вывода.
